Order Module - Code Refactor