@@ -116,15 +116,21 @@ public class CartServiceImpl implements CartService{
     @Override
     public CartDTO getCart(String emailId, Long cartId) {
         Cart cart = cartRepository.findCartByEmailAndCartId(emailId, cartId);
+
         if (cart == null){
             throw new ResourceNotFoundException("Cart", "cartId", cartId);
         }
+
         CartDTO cartDTO = modelMapper.map(cart, CartDTO.class);
         cart.getCartItems().forEach(c ->
                 c.getProduct().setQuantity(c.getQuantity()));
-        List<ProductDTO> products = cart.getCartItems().stream()
-                .map(p -> modelMapper.map(p.getProduct(), ProductDTO.class))
-                .toList();
+
+        List<ProductDTO> products = cart.getCartItems().stream().map(cartItem -> {
+            ProductDTO productDTO = modelMapper.map(cartItem.getProduct(), ProductDTO.class);
+            productDTO.setQuantity(cartItem.getQuantity()); // Set the quantity from CartItem
+            return productDTO;
+        }).collect(Collectors.toList());
+
         cartDTO.setProducts(products);
         return cartDTO;
     }
